@@ -1603,6 +1603,22 @@ operator|!=
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+operator|!
+name|sf
+operator|.
+name|stored
+argument_list|()
+operator|||
+name|schema
+operator|.
+name|isCopyFieldTarget
+argument_list|(
+name|sf
+argument_list|)
+condition|)
+continue|continue;
 name|val
 operator|=
 name|sf
@@ -1743,6 +1759,21 @@ name|name
 argument_list|()
 argument_list|)
 decl_stmt|;
+comment|// don't return copyField targets
+if|if
+condition|(
+name|sf
+operator|!=
+literal|null
+operator|&&
+name|schema
+operator|.
+name|isCopyFieldTarget
+argument_list|(
+name|sf
+argument_list|)
+condition|)
+continue|continue;
 if|if
 condition|(
 name|sf
